[gd_scene load_steps=2 format=3 uid="uid://bvaq87g2hr72f"]

[ext_resource type="Script" path="res://InputBox.gd" id="1_jewaf"]

[node name="Node2D" type="Node2D"]

[node name="InputBox" type="Label" parent="."]
offset_left = 713.0
offset_top = 293.0
offset_right = 994.0
offset_bottom = 373.0
scale = Vector2(1.88, 1.88)
script = ExtResource("1_jewaf")

[node name="Output" type="Label" parent="InputBox"]
layout_mode = 0
offset_left = 464.362
offset_top = -138.83
offset_right = 625.362
offset_bottom = 240.17

[node name="EnterKey" type="Button" parent="InputBox"]
offset_left = -197.34
offset_top = 331.043
offset_right = -110.34
offset_bottom = 394.043
text = "ENTER"

[node name="DeleteKey" type="Button" parent="InputBox"]
offset_left = 405.659
offset_top = 331.043
offset_right = 493.659
offset_bottom = 394.043
text = "DELETE"

[node name="AKey" type="Button" parent="InputBox"]
offset_left = -163.34
offset_top = 257.043
offset_right = -111.34
offset_bottom = 320.043
text = "A"

[node name="BKey" type="Button" parent="InputBox"]
offset_left = 196.66
offset_top = 331.043
offset_right = 248.66
offset_bottom = 394.043
text = "B"

[node name="CKey" type="Button" parent="InputBox"]
offset_left = 51.6595
offset_top = 331.043
offset_right = 103.66
offset_bottom = 394.043
text = "C"

[node name="DKey" type="Button" parent="InputBox"]
offset_left = -21.3405
offset_top = 257.043
offset_right = 30.6595
offset_bottom = 320.043
text = "D"

[node name="EKey" type="Button" parent="InputBox"]
offset_left = -61.3405
offset_top = 184.043
offset_right = -9.34048
offset_bottom = 247.043
text = "E"

[node name="FKey" type="Button" parent="InputBox"]
offset_left = 51.6595
offset_top = 257.043
offset_right = 103.66
offset_bottom = 320.043
text = "F"

[node name="GKey" type="Button" parent="InputBox"]
offset_left = 121.66
offset_top = 257.043
offset_right = 173.66
offset_bottom = 320.043
text = "G"

[node name="HKey" type="Button" parent="InputBox"]
offset_left = 196.66
offset_top = 257.043
offset_right = 248.66
offset_bottom = 320.043
text = "H"

[node name="IKey" type="Button" parent="InputBox"]
offset_left = 299.66
offset_top = 184.043
offset_right = 351.66
offset_bottom = 247.043
text = "I"

[node name="JKey" type="Button" parent="InputBox"]
offset_left = 267.66
offset_top = 257.043
offset_right = 319.66
offset_bottom = 320.043
text = "J"

[node name="KKey" type="Button" parent="InputBox"]
offset_left = 336.66
offset_top = 257.043
offset_right = 388.659
offset_bottom = 320.043
text = "K"

[node name="LKey" type="Button" parent="InputBox"]
offset_left = 405.659
offset_top = 257.043
offset_right = 457.659
offset_bottom = 320.043
text = "L"

[node name="MKey" type="Button" parent="InputBox"]
offset_left = 336.66
offset_top = 331.043
offset_right = 388.659
offset_bottom = 394.043
text = "M"

[node name="NKey" type="Button" parent="InputBox"]
offset_left = 266.66
offset_top = 331.043
offset_right = 318.66
offset_bottom = 394.043
text = "N"

[node name="OKey" type="Button" parent="InputBox"]
offset_left = 367.66
offset_top = 184.043
offset_right = 419.659
offset_bottom = 247.043
text = "O"

[node name="PKey" type="Button" parent="InputBox"]
offset_left = 435.659
offset_top = 184.043
offset_right = 487.659
offset_bottom = 247.043
text = "P"

[node name="QKey" type="Button" parent="InputBox"]
offset_left = -197.34
offset_top = 184.043
offset_right = -145.34
offset_bottom = 247.043
text = "Q"

[node name="RKey" type="Button" parent="InputBox"]
offset_left = 12.6595
offset_top = 184.043
offset_right = 64.6595
offset_bottom = 247.043
text = "R"

[node name="SKey" type="Button" parent="InputBox"]
offset_left = -95.3405
offset_top = 257.043
offset_right = -43.3405
offset_bottom = 320.043
text = "S"

[node name="TKey" type="Button" parent="InputBox"]
offset_left = 84.6595
offset_top = 184.043
offset_right = 136.66
offset_bottom = 247.043
text = "T"

[node name="UKey" type="Button" parent="InputBox"]
offset_left = 229.66
offset_top = 184.043
offset_right = 281.66
offset_bottom = 247.043
text = "U"

[node name="VKey" type="Button" parent="InputBox"]
offset_left = 124.66
offset_top = 331.043
offset_right = 176.66
offset_bottom = 394.043
text = "V"

[node name="WKey" type="Button" parent="InputBox"]
offset_left = -131.34
offset_top = 184.043
offset_right = -79.3405
offset_bottom = 247.043
text = "W"

[node name="XKey" type="Button" parent="InputBox"]
offset_left = -25.3405
offset_top = 331.043
offset_right = 26.6595
offset_bottom = 394.043
text = "X"

[node name="YKey" type="Button" parent="InputBox"]
offset_left = 156.66
offset_top = 184.043
offset_right = 208.66
offset_bottom = 247.043
text = "Y"

[node name="ZKey" type="Button" parent="InputBox"]
offset_left = -95.3405
offset_top = 331.043
offset_right = -43.3405
offset_bottom = 394.043
text = "Z"

[connection signal="pressed" from="InputBox/EnterKey" to="InputBox" method="_on_enter_key_pressed"]
[connection signal="pressed" from="InputBox/DeleteKey" to="InputBox" method="_on_delete_key_pressed"]
[connection signal="pressed" from="InputBox/AKey" to="InputBox" method="_on_a_key_pressed"]
[connection signal="pressed" from="InputBox/BKey" to="InputBox" method="_on_b_key_pressed"]
[connection signal="pressed" from="InputBox/CKey" to="InputBox" method="_on_c_key_pressed"]
[connection signal="pressed" from="InputBox/DKey" to="InputBox" method="_on_d_key_pressed"]
[connection signal="pressed" from="InputBox/EKey" to="InputBox" method="_on_e_key_pressed"]
[connection signal="pressed" from="InputBox/FKey" to="InputBox" method="_on_f_key_pressed"]
[connection signal="pressed" from="InputBox/GKey" to="InputBox" method="_on_g_key_pressed"]
[connection signal="pressed" from="InputBox/HKey" to="InputBox" method="_on_h_key_pressed"]
[connection signal="pressed" from="InputBox/IKey" to="InputBox" method="_on_i_key_pressed"]
[connection signal="pressed" from="InputBox/JKey" to="InputBox" method="_on_j_key_pressed"]
[connection signal="pressed" from="InputBox/KKey" to="InputBox" method="_on_k_key_pressed"]
[connection signal="pressed" from="InputBox/LKey" to="InputBox" method="_on_l_key_pressed"]
[connection signal="pressed" from="InputBox/MKey" to="InputBox" method="_on_m_key_pressed"]
[connection signal="pressed" from="InputBox/NKey" to="InputBox" method="_on_n_key_pressed"]
[connection signal="pressed" from="InputBox/OKey" to="InputBox" method="_on_o_key_pressed"]
[connection signal="pressed" from="InputBox/PKey" to="InputBox" method="_on_p_key_pressed"]
[connection signal="pressed" from="InputBox/QKey" to="InputBox" method="_on_q_key_pressed"]
[connection signal="pressed" from="InputBox/RKey" to="InputBox" method="_on_r_key_pressed"]
[connection signal="pressed" from="InputBox/SKey" to="InputBox" method="_on_s_key_pressed"]
[connection signal="pressed" from="InputBox/TKey" to="InputBox" method="_on_t_key_pressed"]
[connection signal="pressed" from="InputBox/UKey" to="InputBox" method="_on_u_key_pressed"]
[connection signal="pressed" from="InputBox/VKey" to="InputBox" method="_on_v_key_pressed"]
[connection signal="pressed" from="InputBox/WKey" to="InputBox" method="_on_w_key_pressed"]
[connection signal="pressed" from="InputBox/XKey" to="InputBox" method="_on_x_key_pressed"]
[connection signal="pressed" from="InputBox/YKey" to="InputBox" method="_on_y_key_pressed"]
[connection signal="pressed" from="InputBox/ZKey" to="InputBox" method="_on_z_key_pressed"]
